--- a/index_cpy.html
+++ b/index_cpy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BW Post Login</title>
-    <link rel="stylesheet" href="style_1.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
@@ -16,7 +16,7 @@
         Please Login 
         <div class="username">
             <!-- <label for="floatingInput">Email address</label>-->
-            <input type="email" class="form-control" id="floatingInput" placeholder="Username">
+            <input type="email" class="form-control" id="floatingInput" placeholder="Email address">
             
         </div>
         
@@ -38,7 +38,7 @@
     </div>
 
     <div class="footer">
-        Copyright © 2025 Sai Malka
+        Copyright © 2025 BW Post 
     </div>
 
 </body>
