--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="header">
-        <img src="./images/logo.png" alt="bw-post-logo" class="logo">
+        <!--<img src="./images/logo.png" alt="bw-post-logo" class="logo">-->
+        <img src="./images/bw_post_logo_png.png" alt="bw-post-logo" class="logo">
     </div>
 
     <div class="dashboard-container">
@@ -20,12 +21,12 @@
                 <h2>Trennkarte Erstellen</h2>
                 <p>Kundenetikett drucken</p>
             </div>
-            <div class="card" onclick="alert('Second card clicked')">
+            <div class="card" onclick=window.location.href="kisteneinstecker.html">
                 <div class="card-icon">📦</div>
                 <h2>Grobsortierung</h2>
                 <p>Routennummer drucken</p>
             </div>
-            <div class="card" onclick="alert('Second card clicked')">
+            <div class="card" onclick=window.location.href="warenausgang.html">
                 <div class="card-icon">🚚</div>
                 <h2>Warenausgang</h2>
                 <p>Verladen und Buchen des Warenausgang</p>
