--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="header">
-        <img src="./images/logo.png" alt="bw-post-logo" class="logo">
+        <!--<img src="./images/logo.png" alt="bw-post-logo" class="logo">-->
+        <img src="./images/bw_post_logo_png.png" alt="bw-post-logo" class="logo">
     </div>
 
     <div class="login-card">
