copyright change, autofill in js add variables

--- a/dashboard.html
+++ b/dashboard.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="footer">
-        Copyright © 2025 BW Post 
+        Copyright © 2025, Sai Malka, BWPOST GmbH & Co. KG
     </div>
 </body>
 </html>
