--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="footer">
-        Copyright © 2025 Sai Malka
+        Copyright © 2025 Sai Malka, BWPOST GmbH & Co. KG
     </div>
 
 </body>
