--- a/dashboard.html
+++ b/dashboard.html
@@ -23,8 +23,8 @@
             </div>
             <div class="card" onclick=window.location.href="kisteneinstecker.html">
                 <div class="card-icon">📦</div>
-                <h2>Grobsortierung</h2>
-                <p>Routennummer drucken</p>
+                <h2>Sortierung</h2>
+                <p>Kisteneinstecker, Routennummer drucken</p>
             </div>
             <div class="card" onclick=window.location.href="warenausgang.html">
                 <div class="card-icon">🚚</div>
