--- a/trennkarte.html
+++ b/trennkarte.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trennkarte Erstellen</title>
-    <link rel="stylesheet" href="trennkarte.css">
+    <!--<link rel="stylesheet" href="trennkarte.css">-->
+    <link rel="stylesheet" href="trennkarte_copy.css">
+
 </head>
 <body>
     <div class="container">
