add number input function in kisteneinstecker.js and okbutton in html

--- a/kisteneinstecker.html
+++ b/kisteneinstecker.html
@@ -21,12 +21,13 @@
                 </select>
             </div>
             <div class="fach-einlesen">
-                <label for="fach-nummer">Fach Nummer Eingeben</label>
+                <!--<label for="fach-nummer">Fach Nummer Eingeben</label>-->
+                <label>Fach Nummer Eingeben</label>
                 <input type="text" id="fach-nummer" class="fach-nummer" autocomplete="off">
             </div>
             
             <div class="action-buttons">
-                <button class="ok-button" id="ok-button">OK</button>
+                <button class="ok-button" id="ok-button" data-value="ok">OK</button>
                 <button class="druck-button" id="print-button">Drucken</button>
             </div>
 
