add status message in german

--- a/trennkarte.html
+++ b/trennkarte.html
@@ -18,7 +18,7 @@
             </div>
             
             <div class="frame1">
-                <div class="status-label">Ready to scan</div>
+                <div class="status-label">Bereit zum Scannen 🙂 </div>
             </div>
 
             <div class="content3">
