add home button to html

--- a/dashboard.html
+++ b/dashboard.html
@@ -31,7 +31,7 @@
                 <h2>Warenausgang</h2>
                 <p>Verladen und Buchen des Warenausgang</p>
             </div>
-            <div class="card" onclick=window.location.href="https://promail.bwpost.de/Promail.CRM/DesktopDefault.aspx?tabindex=3&tabid=151">
+            <div class="card" onclick="window.open('https://promail.bwpost.de/Promail.CRM/DesktopDefault.aspx', '_blank');">
                 <div class="card-icon"><img src="./images/favicon.ico" alt="Promail Icon"></div>
                 <h2>Promail</h2>
                 <p>Verladen und Buchen des Warenausgang</p>
