--- a/kisteneinstecker.html
+++ b/kisteneinstecker.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="kisteneinstecker.css">
 </head>
 <body>
+    <div class="header">
+        <div class="header-links">
+            <a href="./dashboard.html">Home</a>
+        </div>
+    </div>
     <div class="container">
         <!-- Left Section - Input Section -->
         <div class="content1">
