--- a/trennkarte.html
+++ b/trennkarte.html
@@ -9,6 +9,11 @@
 
 </head>
 <body>
+    <div class="header">
+        <div class="header-links">
+            <a href="./dashboard.html">Home</a>
+        </div>
+    </div>
     <div class="container">
         <!-- Left Section - Scan Frame -->
         <div class="content1">
