--- a/dashboard.html
+++ b/dashboard.html
@@ -34,7 +34,7 @@
             <div class="card" onclick="window.open('https://promail.bwpost.de/Promail.CRM/DesktopDefault.aspx', '_blank');">
                 <div class="card-icon"><img src="./images/favicon.ico" alt="Promail Icon"></div>
                 <h2>Promail</h2>
-                <p>Verladen und Buchen des Warenausgang</p>
+                <p>Sendungs Verwaltung</p>
             </div>  
 
             
